Reg. form password name fix

--- a/views/reg_log.ejs
+++ b/views/reg_log.ejs
@@ -30,7 +30,6 @@
 				  							<input type="text" name="lname" placeholder="Last Name">
 				  						</div>
 				  					</div>
-			  						
 			  						<div class="field">
 			  							<label>Email</label>
 			  							<input type="text" name="email" placeholder="Email">
@@ -42,11 +41,11 @@
 			  						<div class="two fields">
 				  						<div class="field">
 				  							<label>Password</label>
-				  							<input type="Password" name="number" placeholder="Password">
+				  							<input type="Password" name="pword" placeholder="Password">
 				  						</div>
 				  						<div class="field">
 				  							<label>Confirm Password</label>
-				  							<input type="Password" name="number" placeholder="Confirm Password">
+				  							<input type="Password" name="pword_confirm" placeholder="Confirm Password">
 				  						</div>
 			  						</div>
 			  						<button class="large fluid blue ui button" type="submit">Register</button>
