--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,19 +6,15 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.css">
 	</head>
 	<body>
-		<div class="ui page" id="index">
+		<div class="ui page">
 			<div class="ui top attached borderless menu">
 				<div class="text item"><%= title %></div>
 			</div>
 	  	<div class="ui container">
-	  		<div class="ui centered huge header" style="color:rgba(255,255,255,0.4)">
-	  			<%= title %>
-	  			<div class="sub header" style="font-style:italic; color:rgba(255,255,255,0.8)">Social financing</div>
+	  		<div class="ui huge header">
+	  			Create
+	  			<div class="sub header">Make a new group</div>
 	  		</div>
-	  		<div id="index-links">
-	    		<div id="index-link"><a href="/register">Register</a></div>
-	    		<div id="index-link"><a href="/login">Login</a></div>
-	    	</div>
 	    </div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
