--- a/views/regLog.ejs
+++ b/views/regLog.ejs
@@ -19,34 +19,49 @@
 	  				<div class="ui centered center aligned grid">
 						<div class="fourteen wide column">
 							<div class="basic ui segment">
-			  					<form class="ui form">
+			  					<form class="ui form" action="register" method="post">
 				  					<div class="two fields">
-				  						<div class="field">
+				  						<div class="required field">
 				  							<label>First Name</label>
 				  							<input type="text" name="fname" placeholder="First Name">
 				  						</div>
-				  						<div class="field">
+				  						<div class="required field">
 				  							<label>Last Name</label>
 				  							<input type="text" name="lname" placeholder="Last Name">
 				  						</div>
 				  					</div>
-			  						<div class="field">
+				  					<div class="required field">
+			  							<label>Username</label>
+			  							<input type="text" name="uname" placeholder="Username">
+			  						</div>
+			  						<div class="required field">
 			  							<label>Email</label>
 			  							<input type="text" name="email" placeholder="Email">
 			  						</div>
-			  						<div class="field">
-			  							<label>Phone Number</label>
-			  							<input type="text" name="number" placeholder="Phone Number">
-			  						</div>
 			  						<div class="two fields">
-				  						<div class="field">
+				  						<div class="required field">
 				  							<label>Password</label>
 				  							<input type="Password" name="pword" placeholder="Password">
 				  						</div>
-				  						<div class="field">
+				  						<div class="required field">
 				  							<label>Confirm Password</label>
-				  							<input type="Password" name="pword_confirm" placeholder="Confirm Password">
+				  							<input type="Password" name="pwordConfirm" placeholder="Confirm Password">
 				  						</div>
+			  						</div>
+			  						<div class="divider"><i>Bank info</i></div>
+			  						<div class="three fields">
+			  							<div class="required field">
+			  								<label>Bank Number</label>
+			  								<input type="text" name="bankNo" placeholder="Bank Number">
+			  							</div>
+			  							<div class="required field">
+			  								<label>Routing Number</label>
+			  								<input type="text" name="routingNo" placeholder="Routing Number">
+			  							</div>
+			  							<div class="required field">
+			  								<label>Bank Name</label>
+			  								<input type="text" name="bankName" placeholder="Bank Name">
+			  							</div>
 			  						</div>
 			  						<button class="large fluid blue ui button" type="submit">Register</button>
 			  					</form>
