Add phone number field

--- a/views/regLog.ejs
+++ b/views/regLog.ejs
@@ -38,6 +38,10 @@
 			  							<label>Email</label>
 			  							<input type="text" name="email" placeholder="Email">
 			  						</div>
+			  						<div class="required field">
+			  							<label>Phone Number</label>
+			  							<input type="text" name="phoneNo" placeholder="Phone Number">
+			  						</div>
 			  						<div class="two fields">
 				  						<div class="required field">
 				  							<label>Password</label>
