--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,9 +24,9 @@
 
 .ui.container #index-link a {
 	color: rgba(255,255,255,1);
-	-webkit-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
+	-webkit-transition: letter-spacing 0.3s ease-in-out;
+	-o-transition: letter-spacing 0.3s ease-in-out;
+	transition: letter-spacing 0.3s ease-in-out;
 	letter-spacing: 3px;
 }
 
