--- a/views/create.ejs
+++ b/views/create.ejs
@@ -15,7 +15,7 @@
 		  			Create
 		  			<div class="sub header">Make a new group</div>
 		  		</div>
-				<form class="ui form">
+				<form class="ui large form">
 					<div class="inline fields">
 						<label>Bid frequency</label>
 						<div class="field">
