--- a/views/verification.ejs
+++ b/views/verification.ejs
@@ -16,14 +16,14 @@
 	  			Verify your account
 	  		</div>
 			<% if (message == "welcome") { %>
-    			<p>A verification code has been sent to you mobile and to your email. You can also scan the QR code below to obtain your code. Please enter the code below to verify your account.</p>
+    			<p>A verification code has been sent to you mobile and to your email. Please enter the code below to verify your account.</p>
     		<% } else if (message == "something went wrong") { %>
 				<p>Something went wrong. Try again</p>
-				<% } else if (message == "verification pending") { %>
+			<% } else if (message == "verification pending") { %>
 				<p>You need to verify your account before you can proceed. Please enter the verification code</p>
-				<% } else if (message == "wrong code") { %>
+			<% } else if (message == "wrong code") { %>
 				<p>The code you entered is wrong. Try again</p>
-				<% } %>
+			<% } %>
 			<form action="mobileVerification" method="get" class="ui form">
 				<div class="field">
 					<input type="text" id="code" name="code" placeholder="Verification Code">
