Login form method update

--- a/views/regLog.ejs
+++ b/views/regLog.ejs
@@ -97,7 +97,7 @@
 	  				<div class="ui centered center aligned grid">
 						<div class="ten wide column">
 							<div class="basic ui segment">
-			  					<form class="ui form">
+			  					<form class="ui form" method="post" action="authenticate">
 			  						<div class="field">
 			  							<label>Username</label>
 			  							<input type="text" name="uname" placeholder="Username">
