--- a/views/mobileVerification.ejs
+++ b/views/mobileVerification.ejs
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Side by Side</title>
 	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.css">
 </head>
@@ -16,7 +15,7 @@
 	  			Verify your account
 	  		</div>
 			<% if (message == "welcome") { %>
-    			<p>A verification code has been sent to you mobile and to your email. You can also scan the QR code below to obtain your code. Please enter the code below to verify your account.</p>
+    			<p>A verification code has been sent to you mobile and to your email. Please enter the code below to verify your account.</p>
     		<% } else if (message == "something went wrong") { %>
 				<p>Something went wrong. Try again</p>
 				<% } else if (message == "verification pending") { %>
