--- a/views/regLog.ejs
+++ b/views/regLog.ejs
@@ -104,7 +104,7 @@
 			  						</div>
 			  						<div class="field">
 			  							<label>Password</label>
-			  							<input type="password" name="pwrd" placeholder="Password">
+			  							<input type="password" name="pword" placeholder="Password">
 			  						</div>
 			  						<button class="large fluid blue ui button" type="submit">Login</button>
 			  					</form>
@@ -119,5 +119,27 @@
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.js"></script>
+  		<script>
+  			$(function(){
+  				$('form[action="register"]').form({
+  					on: 'blur',
+  					inline: true,
+  					fields: {
+  						fname: { identifier: 'fname', rules: [ { type: 'empty', prompt: 'Please enter your first name' } ] }, 
+  						lname: { identifier: 'lname', rules: [ { type: 'empty', prompt: 'Please enter your last name' } ] }, 
+  						username: { identifier: 'uname', rules: [ { type: 'empty', prompt: 'Please enter a username' } ] }, 
+  						email: { identifier: 'email', rules: [ { type: 'empty', prompt: 'Please enter an Email' }, { type: 'email', prompt: 'Please enter a valid Email' } ] }, 
+  						phoneNo: { identifier: 'phoneNo', rules: [ { type: 'empty', prompt: 'Please enter a phone number' } ] }, 
+  						pword: { identifier: 'pword', rules: [ { type: 'empty', prompt: 'Please enter a password' } ] }, 
+  						pwordConfirm: { identifier: 'pwordConfirm', rules: [ { type:'match[pword]', prompt: 'Passwords do not match' } ] }, 
+  						bankNumber: { identifier: 'bankNo', rules: [ { type: 'empty', prompt: 'Please enter a Bank Number' } ] }, 
+  						bankName: { identifier: 'bankName', rules: [ { type: 'empty', prompt: 'Please enter a Bank Name' } ] }, 
+  						routingNumber: { identifier: 'routingNo', rules: [ { type: 'empty', prompt: 'Please enter a Routing Number' } ] },
+  					}
+  				}).submit(function(){
+					// return false;
+				});
+  			});
+  		</script>
 	</body>
 </html>
