Members form post fix

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -72,7 +72,7 @@
   					$('#fields').html('');
   					var n = parseInt($(this).val());
   					for (var i = 1; i <= n; i++) {
-  						$('#fields').append('<div class="field"><input type="text" name="members[]" placeholder="Member ' + i + '"></div>');
+  						$('#fields').append('<div class="field"><input type="text" name="members" placeholder="Member ' + i + '"></div>');
   					}
   				});
   				// $('body').delegate('input[name="member[]"]', "keyup", function() {
