--- a/views/mobileVerification.ejs
+++ b/views/mobileVerification.ejs
@@ -23,7 +23,7 @@
 			<% } else if (message == "wrong code") { %>
 				<p>The code you entered is wrong. Try again</p>
 			<% } %>
-			<form action="mobileVerification" method="get" class="ui form">
+			<form action="verify" method="get" class="ui form">
 				<div class="field">
 					<input type="text" id="code" name="code" placeholder="Verification Code">
 				</div>
