--- a/views/create.ejs
+++ b/views/create.ejs
@@ -4,6 +4,7 @@
 		<title><%= title %></title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.css">
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	</head>
 	<body>
 		<div class="ui page">
@@ -40,13 +41,13 @@
 						</div>
 					</div>
 					<div class="field">
+						<label>Starting date</label>
+						<input type="text" id="datepicker" class="startDate">
+					</div>
+					<div class="field">
 						<label>Number of Members</label>
 						<input type="number" name="memberCount" placeholder="Number of Members">
 					</div>
-					<!--<div class="field">
-						<label>Member(s) <span style="color:rgba(0,0,0,0.3)">(i.e. number of <span class="iterationsTxt">months</span> of bidding)</span></label>
-						<input type="text" name="member[]" placeholder="Member" class="currentWorkingInput" autocomplete="off">
-					</div>-->
 					<div id="fields"></div>
 					<button type="submit" class="ui green button">Create</button>
 				</form>
@@ -54,6 +55,7 @@
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.js"></script>
+  		<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   		<script>
   			$(function() {
   				$('input[type="radio"]').on("change", function(){
@@ -75,12 +77,7 @@
   						$('#fields').append('<div class="field"><input type="text" name="members" placeholder="Member ' + i + '"></div>');
   					}
   				});
-  				// $('body').delegate('input[name="member[]"]', "keyup", function() {
-  				// 	if ($.trim($(this).val()) != '' && $(this).hasClass('currentWorkingInput')) {
-  				// 		$(this).parent('.field').append('<input type="text" name="member[]" placeholder="Member" autocomplete="off" class="currentWorkingInput">');
-  				// 		$(this).removeClass('currentWorkingInput');
-  				// 	}
-  				// });
+  				$( "#datepicker" ).datepicker();
   			});
   		</script>
 	</body>
