--- a/views/liveBid.ejs
+++ b/views/liveBid.ejs
@@ -39,11 +39,10 @@
 		  				</tbody>
 		  			</table>
 		  		</div>
-		  		<div class="form">
+		  		<div class="centered form">
 		  			<div class="field">
-		  				<label>Make a bid!</label>
-		  				<div class="action input">
-		  					<input type="text" placeholder="BID">
+		  				<div class="ui action input">
+		  					<input type="text" placeholder="Bid">
 		  					<button class="ui green button">Make Bid</button>
 		  				</div>
 		  			</div>
