--- a/views/regLog.ejs
+++ b/views/regLog.ejs
@@ -79,7 +79,7 @@
 			  						<button class="large fluid blue ui button" type="submit">Register</button>
 			  					</form>
 			  					<div class="ui center aligned tiny header">
-			  						<a href="/">Back</a>
+			  						<a href="/" class="ui basic blue button">Back</a>
 			  					</div>
 			  				</div>
 						</div>
@@ -109,7 +109,7 @@
 			  						<button class="large fluid blue ui button" type="submit">Login</button>
 			  					</form>
 			  					<div class="ui center aligned tiny header">
-			  						<a href="/">Back</a>
+			  						<a href="/" class="ui basic blue button">Back</a>
 			  					</div>
 			  				</div>
 						</div>
