--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,19 +7,19 @@
 	</head>
 	<body>
 		<div class="ui page" id="index">
-			<div class="ui top attached borderless menu">
+<!-- 			<div class="ui top attached borderless menu">
 				<div class="text item"><%= title %></div>
-			</div>
-	  	<div class="ui container">
-	  		<div class="ui centered huge header" style="color:rgba(255,255,255,0.4)">
-	  			<%= title %>
-	  			<div class="sub header" style="font-style:italic; color:rgba(255,255,255,0.8)">Social financing</div>
-	  		</div>
-	  		<div id="index-links">
-	    		<div id="index-link"><a href="/register">Register</a></div>
-	    		<div id="index-link"><a href="/login">Login</a></div>
-	    	</div>
-	    </div>
+			</div> -->
+		  	<div class="ui container">
+		  		<div class="ui centered huge header">
+		  			<span class="main_title"><%= title %></span>
+		  			<div class="sub header" id="notmain_title" style="font-style:italic; color:rgba(255,255,255,0.8)">Social-funding done right.</div>
+		  		</div>
+		  		<div id="index-links">
+		  			<div id="index-link"><a href="/login">Sign In</a></div>
+		    		<div id="index-link"><a href="/register">Sign Up</a></div>
+		    	</div>
+		    </div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.js"></script>
