Pennywise. Live wise.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 		  	<div class="ui container">
 		  		<div class="ui centered huge header">
 		  			<span class="main_title"><%= title %></span>
-		  			<div class="sub header" id="notmain_title" style="font-style:italic; color:rgba(255,255,255,0.8)">Social-funding done right.</div>
+		  			<div class="sub header" id="notmain_title" style="font-style:italic; color:rgba(255,255,255,0.8)">Pennywise. Live wise</div>
 		  		</div>
 		  		<div id="index-links">
 		  			<div id="index-link"><a href="/login">Sign In</a></div>
