Static demo content

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -10,6 +10,7 @@
 		<div class="ui page">
 			<div class="ui top attached borderless menu">
 				<a href="/"><div class="text item"><%= title %></div></a>
+				<a href="/logout"><div class="right link text item">Logout</div></a>
 			</div>
 		  	<div class="ui container">
 		  		<div class="ui huge header">
