--- a/views/liveBid.ejs
+++ b/views/liveBid.ejs
@@ -8,9 +8,8 @@
 	<body>
 		<div class="ui page">
 			<div class="ui top attached borderless menu">
-				<a href="/"><div class="header item"><%= title %></div></a>
-				<a href="/group"><div class="text link item">Return</div></a>
-				<div class="right text link item">Logout</div>
+				<a href="/"><div class="text item"><%= title %></div></a>
+				<a href="/logout"><div class="right link text item">Logout</div></a>
 			</div>
 		  	<div class="ui container">
 		  		<div class="ui center aligned header" style="color:rgba(0,0,0,0.5);letter-spacing:3px">
@@ -41,7 +40,7 @@
 		  		</div>
 		  		<div class="centered form">
 		  			<div class="field">
-		  				<div class="ui action input">
+		  				<div class="ui action fluid input">
 		  					<input type="text" placeholder="Bid">
 		  					<button class="ui green button">Make Bid</button>
 		  				</div>
