--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,6 +49,18 @@
 	line-height: 80px;
 }
 
+.learn_more {
+	font-size: 1.7em;
+	opacity: 0.8;
+	color: white;
+	text-align: center;
+	position: absolute;
+	bottom: 50px;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+}
+
 #notmain_title {
 	font-size: 1.2em;
 	margin: 5px 0; 
