--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -46,6 +46,7 @@
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.js"></script>
+  		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
   		<script>
 	  		$('.ui.selectable.unstackable.top.attached.table').on("click", function() {
 	  			$(this).next('#hidden').slideToggle(300);
