--- a/views/learnMore.ejs
+++ b/views/learnMore.ejs
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><%= title %></title>
+		<title>Intro to EJS</title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.css">
 	</head>
 	<body>
 		<div class="ui page" id="index">
-<!-- 			<div class="ui top attached borderless menu">
-				<div class="text item"><%= title %></div>
-			</div> -->
 		  	<div class="ui container">
 		  		<div class="ui centered huge header">
-		  			<span class="main_title"><%= title %></span>
+		  			<span class="main_title">Intro to EJS</span>
 		  			<div class="sub header" id="notmain_title" style="font-style:italic; color:rgba(255,255,255,0.8)">Pennywise. Live wise.</div>
 		  		</div>
 		  		<div id="index-links">
@@ -20,7 +17,7 @@
 		    		<div id="index-link"><a href="/register">Sign Up</a></div>
 		    	</div>
 		    	<div class="learn_more">
-		    		What is PennyPool? <a href="/learn-more">Learn more.</a>
+		    		Cool? <a href="/"> &hellip;go back!</a>
 		    	</div>
 		    </div>
 		</div>
